# blender-clone

./: .gitignore  CMakeLists.txt  ideas.md  ideas_sculpt_pro.md  imgui.ini  logs.md  plan.md
include/anim/: Animation.h  Armature.h  AutoRig.h  BoneRenderer.h
include/core/: BVH.h  HalfEdgeMesh.h  MeshGenerator.h  ModeManager.h  ObjLoader.h
include/edit/: EditEngine.h  EditSelection.h  EditTools.h  SelectionRenderer.h
include/export/: GltfExporter.h
include/input/: InputManager.h
include/paint/: PaintEngine.h
include/render/: Camera.h  Renderer.h  Shader.h
include/sculpt/: Brush.h  Raycaster.h  SculptEngine.h
include/tools/: LowpolyTools.h
src/: main.cpp
src/anim/: Animation.cpp  Armature.cpp  AutoRig.cpp  BoneRenderer.cpp
src/core/: BVH.cpp  HalfEdgeMesh.cpp  MeshGenerator.cpp  ObjLoader.cpp
src/edit/: EditEngine.cpp  EditSelection.cpp  EditTools.cpp  SelectionRenderer.cpp
src/export/: GltfExporter.cpp
src/input/: InputManager.cpp
src/paint/: PaintEngine.cpp
src/render/: Camera.cpp  Renderer.cpp  Shader.cpp
src/sculpt/: Brush.cpp  Raycaster.cpp  SculptEngine.cpp
src/tools/: LowpolyTools.cpp
tests/: test_bvh.cpp  test_camera.cpp  test_edit_tools.cpp  test_framework.h  test_mesh.cpp  test_obj_loader.cpp  test_raycaster.cpp  test_sculpt.cpp
